--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean-webpack-plugin": "*",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
-    "eslint": "^7.26.0",
+    "eslint": "^7.27.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.2",
@@ -25,7 +25,7 @@
     "sass-loader": "^11.1.1",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
-    "webpack": "^5.37.0",
+    "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
   },
@@ -71,7 +71,7 @@
     "big.js": "^5.2.2",
     "binary-extensions": "^2.2.0",
     "body-parser": "^1.19.0",
-    "bonjour": "^3.5.0",
+    "bonjour": "^3.3.0",
     "boolbase": "^1.0.0",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
@@ -130,7 +130,7 @@
     "detect-node": "^2.0.5",
     "dir-glob": "^3.0.1",
     "dns-equal": "^1.0.0",
-    "dns-packet": "^1.3.1",
+    "dns-packet": "^5.2.3",
     "dns-txt": "^2.0.2",
     "doctrine": "^3.0.0",
     "dom-converter": "^0.2.0",
@@ -324,7 +324,7 @@
     "mixin-deep": "^1.3.2",
     "mkdirp": "^0.5.5",
     "ms": "^2.1.2",
-    "multicast-dns": "^6.2.3",
+    "multicast-dns": "^7.2.3",
     "multicast-dns-service-types": "^1.1.0",
     "nanoid": "^3.1.23",
     "nanomatch": "^1.2.13",
@@ -547,5 +547,14 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "Private repository for @vadavur",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rolling-scopes-school/vadavur-JSFE2021Q1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rolling-scopes-school/vadavur-JSFE2021Q1/issues"
+  },
+  "homepage": "https://github.com/rolling-scopes-school/vadavur-JSFE2021Q1#readme",
+  "keywords": []
 }
